EditNormal modifier: add some 'maximum angle' limit.

Allows to avoid generating flipped faces when using extreme normal modifications.

Related to T48576.